--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ torchvision==0.15.2
 torchaudio==2.0.2
 matplotlib
 tqdm
+torchmetrics
 
 # --extra-index-url https://download.pytorch.org/whl/cu118
 --extra-index-url https://download.pytorch.org/whl/cpu
